<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <LinearLayout
        android:id="@+id/app_shape_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/app_waves"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_with"
        app:layout_constraintBottom_toTopOf="@+id/img_helper_3"
        app:layout_constraintDimensionRatio="6:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_welcome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/app_welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_helper_4"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/app_sub_welcomeToTheApp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/app_sub_welcomeToTheApp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_welcome"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/lbl_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txt_username"
        android:text="@string/txt_username"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_helper_2"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_5"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/img_helper_2"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_username"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/lbl_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txt_email"
        android:text="@string/txt_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_helper_2"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_6"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/img_helper_2"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_email"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txt_password"
        android:text="@string/txt_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_helper_2"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_7"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/img_helper_2"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_password"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:textColor="@color/white"
        app:backgroundTint="@color/main_gray"
        app:layout_constraintEnd_toStartOf="@+id/img_helper_2"
        app:layout_constraintStart_toStartOf="@+id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_8"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/app_login_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_question_login"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_9"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/app_redirect_to_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txt_login"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/app_login_question"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_9"
        app:layout_constraintWidth_percent="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>