<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/app_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_settings"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_settings_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_settings_sub"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toBottomOf="@+id/app_settings" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <TextView
        android:id="@+id/app_prefrences"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subTitle_preferences"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_3" />

    <ImageView
        android:id="@+id/app_ic_language"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/img_helper_4"
        app:layout_constraintStart_toStartOf="@+id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_5"
        app:srcCompat="@drawable/ic_baseline_language_24" />

    <Button
        android:id="@+id/btn_languages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:text="@string/title_languages"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/app_ic_language"
        app:layout_constraintTop_toTopOf="@+id/img_helper_5" />

    <TextView
        android:id="@+id/app_app_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/subTitle_app"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_6" />

    <ImageView
        android:id="@+id/app_ic_terms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/img_helper_4"
        app:layout_constraintStart_toStartOf="@+id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_7"
        app:srcCompat="@drawable/ic_terms_24dp" />

    <Button
        android:id="@+id/btn_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:text="@string/btn_terms"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/img_helper_4"
        app:layout_constraintTop_toTopOf="@+id/img_helper_7" />

    <ImageView
        android:id="@+id/app_ic_privacy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/img_helper_4"
        app:layout_constraintStart_toStartOf="@+id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_8"
        app:srcCompat="@drawable/ic_privacy_maybe_24dp" />

    <Button
        android:id="@+id/btn_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:text="@string/btn_privacy"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/app_ic_privacy"
        app:layout_constraintTop_toTopOf="@+id/img_helper_8" />

    <ImageView
        android:id="@+id/app_ic_logout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/img_helper_4"
        app:layout_constraintStart_toStartOf="@+id/img_helper_1"
        app:layout_constraintTop_toTopOf="@+id/img_helper_9"
        app:srcCompat="@drawable/ic_logout_24dp" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:text="@string/btn_logout"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/app_ic_logout"
        app:layout_constraintTop_toTopOf="@+id/img_helper_9" />

</androidx.constraintlayout.widget.ConstraintLayout>